# shift-scheduler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-release.yml
src/shift_scheduler/: __init__.py  data_manager.py  main.py  reporting.py  scheduler_logic.py  ui.py
tests/: test_data_integrity.py  test_deviation_tracking.py  test_employee_preferences.py  test_manual_assignments.py  test_partial_generation.py  test_pdf_export.py  test_scheduler.py
